feat: add jwt token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.h2.console.path=/h2-console
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+security.jwt.secret=gJjJmO7AkwiE7BJuHTaA4blDuqLE18k42eChZUlJ5Ck=
+security.jwt.duration_in_hours=2
